--- a/PicScramble/app/src/main/res/layout/game_item_view.xml
+++ b/PicScramble/app/src/main/res/layout/game_item_view.xml
@@ -6,8 +6,8 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/item_card_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/card_width"
+        android:layout_height="@dimen/card_height"
         card_view:cardCornerRadius="@dimen/card_padding"
         card_view:cardElevation="@dimen/card_padding"
         card_view:cardMaxElevation="@dimen/card_padding"
@@ -15,23 +15,25 @@
 
         <ImageView
             android:id="@+id/item_view"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
             android:padding="10dp"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:scaleType="fitXY">
+
+        </ImageView>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:id="@+id/item_card_view_flipped"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/card_width"
+        android:layout_height="@dimen/card_height"
         card_view:cardCornerRadius="@dimen/card_padding"
         card_view:cardElevation="@dimen/card_padding"
         card_view:cardMaxElevation="@dimen/card_padding"
-        card_view:contentPadding="@dimen/card_padding">
+        card_view:contentPadding="@dimen/card_padding"
+        android:visibility="gone">
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
