--- a/PicScramble/app/src/main/res/layout/game_view.xml
+++ b/PicScramble/app/src/main/res/layout/game_view.xml
@@ -31,23 +31,24 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/random_card_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/timeView"
+        android:layout_width="@dimen/card_width"
+        android:layout_height="@dimen/card_height"
+        android:layout_below="@id/timeView"
         card_view:cardCornerRadius="@dimen/card_padding"
         card_view:cardElevation="@dimen/card_padding"
         card_view:cardMaxElevation="@dimen/card_padding"
         card_view:contentPadding="@dimen/card_padding">
 
-        <TextView
-            android:id="@+id/random_item_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="10dp"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-    </android.support.v7.widget.CardView>
+    <ImageView
+        android:id="@+id/random_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="10dp"
+        android:scaleType="fitXY">
+
+    </ImageView>
+    </android.support.v7.widget.CardView>>
 
 </RelativeLayout>
