The final touch to the POC with the flip animation and other bug fixes.

--- a/PicScramble/app/src/main/res/layout/game_item_view.xml
+++ b/PicScramble/app/src/main/res/layout/game_item_view.xml
@@ -33,7 +33,8 @@
         card_view:cardElevation="@dimen/card_padding"
         card_view:cardMaxElevation="@dimen/card_padding"
         card_view:contentPadding="@dimen/card_padding"
-        android:visibility="gone">
+        android:visibility="gone"
+        >
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
