--- a/PicScramble/app/src/main/res/layout/game_view.xml
+++ b/PicScramble/app/src/main/res/layout/game_view.xml
@@ -13,20 +13,14 @@
         android:scrollbars="vertical"
         >
     </android.support.v7.widget.RecyclerView>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Flip!"
-        android:id="@+id/btnFlip"
-        android:layout_below="@+id/recycler_view"
-        android:layout_centerHorizontal="true"/>
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/timeView"
         android:text="@string/title_text_gameView"
-        android:layout_below="@id/btnFlip"
+        android:layout_below="@id/recycler_view"
         android:layout_centerHorizontal="true" />
 
     <android.support.v7.widget.CardView
